--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
                     <p>Sou um profissional em formação na área de Tecnologias de Informação, com foco em desenvolvimento web, design digital e escrita de conteúdos. Tenho experiência na criação de websites, portfólios online e projetos académicos, sempre com atenção à organização, funcionalidade e apresentação visual.</p>
                     <p>Sou motivado pela aprendizagem contínua, gosto de enfrentar novos desafios e estou a dar os primeiros passos no mercado freelance, oferecendo serviços com dedicação, criatividade e responsabilidade.</p>
                     <div class="btn-social">
-                        <a href="#" aria-label="Instagram"><button><i class="bi bi-instagram"></i></button></a>
-                        <a href="www.linkedin.com/in/derik-jamba-80a213394" aria-label="LinkedIn"><button><i class="bi bi-linkedin"></i></button></a>
+                        <a href="https://www.instagram.com/derikkk.j?igsh=bGd4YnN1czZrc216" aria-label="Instagram"><button><i class="bi bi-instagram"></i></button></a>
+                        <a href="https://www.linkedin.com/in/derik-jamba-80a213394" aria-label="LinkedIn"><button><i class="bi bi-linkedin"></i></button></a>
                     </div>
                 </div>
             </div>
@@ -163,7 +163,7 @@
                 </div>
                 <div class="btn-social">
                     <a href="https://www.instagram.com/derikkk.j?igsh=bGd4YnN1czZrc216"><button><i class="bi bi-instagram"></i></button></a>
-                    <a href="www.linkedin.com/in/derik-jamba-80a213394"><button><i class="bi bi-linkedin"></i></button></a>
+                    <a href="https://www.linkedin.com/in/derik-jamba-80a213394"><button><i class="bi bi-linkedin"></i></button></a>
                 </div>
             </div>
         </div>
