atualizacao da compatibilidade de imagens para webp

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="flex">
 
                 <div class="img-topo-site">
-                    <img src="photos/Derik2.png" alt="Imagem de programador" height="250" width="200">
+                    <img src="photos/Derik2.webp" alt="Imagem de programador" height="250" width="200">
                 </div>
 
                 <div class="txt-topo-site">
@@ -108,7 +108,7 @@
         <div class="interface">
             <div class="flex">
                 <div class="sobre-img">
-                    <img src="photos/Derik1.png" alt="Derik Jamba" width="200" height="250">
+                    <img src="photos/Derik1.webp" alt="Derik Jamba" width="200" height="250">
                 </div>
                 <div class="txt-sobre">
                     <h2>MUITO PRAZER, <span>SOU DERIK JAMBA</span></h2>
@@ -127,13 +127,13 @@
         <div class="interface">
             <h2 class="titulo">MEU <span>PORTFÓLIO</span></h2>
             <div class="flex">
-                <div class="img-port" style="background-image: url('photos/localhost_5173_.png');">
+                <div class="img-port" style="background-image: url('photos/localhost_5173_.webp');">
                     <div class="overlay">Projeto 1</div>
                 </div>
-                <div class="img-port" style="background-image: url('photos/Pasted\ image.png');">
+                <div class="img-port" style="background-image: url('photos/Pasted\ image.webp');">
                     <div class="overlay">Projeto 2</div>
                 </div>
-                <div class="img-port" style="background-image: url('photos/projeto_integrado.png');">
+                <div class="img-port" style="background-image: url('photos/projeto_integrado.webp');">
                     <div class="overlay">Projeto 3</div>
                 </div>
             </div>
